--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h1>Welcome!!!!!!!!!!!!!!!</h1>
+<div class="home-callout text-center container-fluid">
+  <h1>WELCOME !!!!!!!!!!!!!!!</h1>
+  <h3>BOOOYEEEEHHHH!</h3>
+</div>
