--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,4 @@
-<h2>About Page</h2>
+<div class="container text-center">
+  <h1>About Page</h1>
+  <p>We are gods of the useless rat divinities. Okay?</p>
+</div>
